--- a/Projeto_blog_pessoal/src/main/resources/application.properties
+++ b/Projeto_blog_pessoal/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/db_blog_pessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
-spring.datasource.username=root
-spring.datasource.password=
+spring.jpa.generate-ddl=true
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 spring.jpa.show-sql=true
+
+
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost/db_blog_pessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+# spring.datasource.username=root
+# spring.datasource.password=
+# spring.jpa.show-sql=true
